rs/idl-gen/tests/snapshots/generator__program_idl_ctors_and_types.snap
---
source: rs/idl-gen/tests/generator.rs
expression: generated_idl
---
!@sails: 2.0.0

program CtorsAndTypesProgram {
    constructors {
        New();

        /// Has docs
        FromEnum(p1: GenericEnum<ActorId, GenericStruct<u32>>);
    }

    types {
        /// GenericEnum docs
        /// with two lines
        enum GenericEnum<T1, T2> {
            /// GenericEnum `Variant1` of type 'T1'
            Variant1(T1),
            /// GenericEnum `Variant2` of type 'T2'
            Variant2(T2),
        }

        /// GenericStruct docs
        struct GenericStruct<T> {
            /// GenericStruct field `p1`
            p1: T,
        }
    }
}
