rs/idl-gen/tests/snapshots/generator__program_idl_works_with_no_services.snap
---
source: rs/idl-gen/tests/generator.rs
expression: generated_idl
---
!@sails: 2.0.0

program NoServicesWithCtorsProgram {
    constructors {
        /// This is New constructor
        New();

        /// This is FromStr constructor
        /// with second line
        FromStr(p1: String);
    }
}
