rs/idl-gen/tests/snapshots/generator__service_idl_fns_no_queries.snap
---
source: rs/idl-gen/tests/generator.rs
expression: generated_idl
---
!@sails: 0.9.1
!@author: 
!@version: 0.0.0

service  {
    functions {
        DoThis(p1: u32) -> u32;
    }
}
