rs/idl-gen/tests/snapshots/generator__service_idl_works_with_base_services.snap
---
source: rs/idl-gen/tests/generator.rs
expression: idl
---

!@sails: 1.0.0-beta.5

service B@0x256fb43427bef08e {
    events {
        ThatDoneBase {
            p1: u16,
        },
        ThisDoneBase(u32),
    }
    functions {
        DoThatBase(p1: String) -> String;
        DoThis(p1: u32) -> u32;
        @query
        That(p1: String) -> String;
        @query
        ThisBase(p1: u16) -> u16;
    }
}

service ServiceMetaWithBase@0x10a0a7803b912783 {
    extends {
        B@0x256fb43427bef08e,
    }
    events {
        /// `That` Done too
        ThatDone {
            /// This is `p1` field
            p1: String,
        },
        /// `This` Done
        ThisDone (
            /// This is unnamed field, comments ignored
            u32,
        ),
        ThisDoneTwice (
            /// This is the first unnamed field
            u32,
            /// This is the second unnamed field
            u32,
        ),
    }
    functions {
        /// Some multiline description
        /// Second line
        /// Third line
        DoThat(par1: DoThatParam) -> Result<(String, u32), (String)>;
        /// Some description
        DoThis(p1: u32, p2: String, p3: (Option<String>, u8), p4: TupleStruct, p5: GenericStruct<H256>, p6: GenericStruct<String>, p7: GenericConstStructN8, p8: GenericConstStructN32) -> String;
        /// This is a second query
        /// This is a second line
        @query
        That(pr1: ThatParam) -> String;
        /// This is a query
        @query
        This(p1: u32, p2: String, p3: (Option<String>, u8), p4: TupleStruct, p5: GenericEnum<bool, u32>) -> Result<(String, u32), String>;
    }
    types {
        struct DoThatParam {
            p1: u32,
            p2: String,
            p3: ManyVariants,
        }
        /// GenericConstStruct docs
        struct GenericConstStructN32 {
            /// GenericStruct field `field`
            field: [u8; 32],
        }
        /// GenericConstStruct docs
        struct GenericConstStructN8 {
            /// GenericStruct field `field`
            field: [u8; 8],
        }
        /// GenericEnum docs
        /// with two lines
        enum GenericEnum<T1, T2> {
            /// GenericEnum `Variant1` of type 'T1'
            Variant1(T1),
            /// GenericEnum `Variant2` of type 'T2'
            Variant2(T2),
        }
        /// GenericStruct docs
        struct GenericStruct<T> {
            /// GenericStruct field `p1`
            p1: T,
        }
        enum ManyVariants {
            One,
            Two(u32),
            Three(Option<[U256]>),
            Four {
                a: u32,
                b: Option<u16>,
            },
            Five(String, [u8]),
            Six((u32)),
            Seven(GenericEnum<u32, String>),
            Eight([[(u32, String)]; 10]),
        }
        struct ThatParam {
            p1: ManyVariants,
        }
        /// TupleStruct docs
        struct TupleStruct(bool);
    }
}
